added the info page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,20 +26,16 @@
             android:exported="true" />
         <activity
             android:name=".ElderlyStyleActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".BusinessStyleActivity"
             android:exported="true" />
         <activity
             android:name=".StudentStyleActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".AdultStyleActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".RegisterActivity"
             android:exported="true" />
